# ReactivePlusPlus

./: BUILDING.md  CMakePresets.json  Readme.md  conanfile.py  sonar-project.properties
.github/workflows/: analyzers.yml  ci v2.yml
cmake/: dependencies.cmake
src/examples/rppgrpc/: CMakeLists.txt
src/examples/rppgrpc/communication/: client.cpp  protocol.proto  server.cpp
src/extensions/rppgrpc/rppgrpc/: client_reactor.hpp  fwd.hpp  reactor.hpp  rppgrpc.hpp  server_reactor.hpp
src/extensions/rppgrpc/rppgrpc/utils/: exceptions.hpp
src/tests/: CMakeLists.txt
src/tests/rppgrpc/: proto.proto  test_async_client.cpp
src/tests/utils/: CMakeLists.txt  fakeit.hpp
